# spike

./: .gitignore  Cargo.toml  README.md
data/: giab_hg38
data/ldlr_deletions/: README.md  ldlr_exons_hg38.bed  ldlr_known_deletions_hg38.vcf
data/validation/: hg002_chr20_delly.bcf  hg002_chr20_delly.bcf.csi  hg002_novaseq_chr20_delly.bcf  hg002_novaseq_chr20_delly.bcf.csi  validation_summary.tsv
data/validation/dup_test/: README.txt  align.sh  truth.vcf
data/validation/dup_test_new/: align.sh  truth.vcf
data/validation/spike_vaf_0.5/: align.sh  delly.bcf  delly.bcf.csi  truth.vcf
data/validation/truth/: chr20_benchmark.bed  chr20_dels_filtered.vcf  chr20_dels_in_benchmark.vcf  chr20_dels_in_benchmark.vcf.gz.tbi
scripts/: dup_realism_check.py  validate_pipeline.sh
src/: bam_stats.rs  exon.rs  extract.rs  fastq.rs  haplotype.rs  loh.rs  main.rs  reference.rs  simulate.rs  stats.rs  synth.rs  truth.rs  types.rs  validate.rs  vcf_input.rs
